--- a/app/views/games/score.html.erb
+++ b/app/views/games/score.html.erb
@@ -18,4 +18,6 @@
   <p>Oops you can't write <%= @word %> with these letters : <%= @grid %></p>
 <% end  %>
 
+<h2>You are : @user</h2>
+
 <%= link_to 'Play again', new_path %>
